@@ -734,7 +734,11 @@ grub_nilfs2_load_sb (struct grub_nilfs2_data *data)
   /* Make sure if 1st super block is valid.  */
   valid[0] = grub_nilfs2_valid_sb (&data->sblock);
 
-  partition_size = grub_disk_get_size (disk);
+  if (valid[0])
+    partition_size = (grub_le_to_cpu64 (data->sblock.s_dev_size)
+		      >> GRUB_DISK_SECTOR_BITS);
+  else
+    partition_size = grub_disk_get_size (disk);
   if (partition_size != GRUB_DISK_SIZE_UNKNOWN)
     {
       /* Read second super block. */
